tests/ui/boolean_enforcement/fail/where_int_column_pg.stderr
error[E0277]: `Int4` is not a boolean SQL type
  --> tests/ui/boolean_enforcement/fail/where_int_column_pg.rs:20:46
   |
20 |     let _ = qb.select(()).from(user).r#where(user.age);
   |                                      ------- ^^^^^^^^ logical operations require a boolean-typed expression
   |                                      |
   |                                      required by a bound introduced by this call
   |
   = help: the trait `BooleanLike` is not implemented for `Int4`
help: the following other types implement trait `BooleanLike`
  --> types/src/sql/mod.rs
   |
   | impl BooleanLike for crate::sqlite::types::Integer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::sqlite::types::Integer`
...
   | impl BooleanLike for crate::postgres::types::Boolean {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::postgres::types::Boolean`
note: required by a bound in `drizzle::postgres::builder::select::<impl drizzle::postgres::builder::QueryBuilder<'a, S, drizzle::postgres::builder::SelectFromSet, T, M, R>>::r#where`
  --> postgres/src/builder/select.rs
   |
   |     pub fn r#where<E>(self, condition: E) -> SelectBuilder<'a, S, SelectWhereSet, T, M, R>
   |            ------- required by a bound in this associated function
...
   |         E::SQLType: drizzle_core::types::BooleanLike,
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `drizzle::postgres::builder::select::<impl QueryBuilder<'a, S, SelectFromSet, T, M, R>>::r#where`
